# JawafdehiAPI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_DOCUMENTATION.md  Dockerfile  IMPLEMENTATION_SUMMARY_SOURCE_TYPE.md  PR_43_SUMMARY.md  README.md  SLUG_AUTO_GENERATION_FIX.md  VERIFICATION_REPORT.md  create_test_data.py  permissions.md  pyproject.toml
.amazonq/rules/: 00-core.md
.github/: copilot-instructions.md
.github/instructions/: agni.instructions.md  cases.instructions.md  tests.instructions.md
.github/workflows/: ci.yml  db-backup.yml  process-nes-queue.yml
.kiro/steering/: product.md  project-standards.md  structure.md  tech.md
agni/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
agni-ui/: .env.example  .eslintrc.cjs  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  vite.config.js
agni-ui/docs/: DJANGO_INTEGRATION.md  DJANGO_SETTINGS.md  REDUX_MIGRATION.md
agni-ui/scripts/: build-for-django.sh  dev.sh
agni-ui/src/: App.jsx  index.css  main.jsx
agni/migrations/: 0001_initial.py  0002_uploaddocument_storedextractionsession_active_tasks_and_more.py  0003_delete_sessiontask.py  0004_alter_storedextractionsession_active_tasks.py  0005_rename_active_tasks_to_tasks.py
agni/services/: __init__.py  agni_models.py  agni_service.py  persistence.py  search.py  tasks.py
allegations/: admin.py  api_views.py  apps.py  models.py  serializers.py  urls.py
allegations/migrations/: 0001_initial.py  0002_remove_allegation_timeline_remove_modification_actor_and_more.py  0003_remove_timeline_event_timeline_description_and_more.py  0004_evidence_description.py
allegations/templates/: index.html
case_workflows/: __init__.py  admin.py  apps.py  encoding_tool.py  models.py  output.py  permissions.py  registry.py  runner.py  serializers.py  storage_utils.py  urls.py  views.py  workflow.py
case_workflows/ciaa_caseworker/: DEVELOP.md  README.md  workflow.py
case_workflows/management/: __init__.py
case_workflows/migrations/: 0001_initial.py
case_workflows/tests/: __init__.py  test_encoding_tool.py  test_models.py  test_runner.py  test_storage_utils.py  test_views.py  test_workflow.py  test_workflow_execution.py
case_workflows/workflows/: __init__.py
cases/: admin.py  api_views.py  api_views_with_permissions_example.py  apps.py  caseworker_serializers.py  fields.py  models.py  permissions.py  serializers.py  storage.py  throttles.py  urls.py  utils.py  validators.py  views.py  widgets.py
cases/migrations/: 0001_initial.py  0002_documentsource.py  0002_remove_allegation_timeline_remove_modification_actor_and_more.py  0003_alter_case_alleged_entities_and_more.py  0003_remove_timeline_event_timeline_description_and_more.py  0004_evidence_description.py  0004_remove_case_add_contributors_to_documentsource.py  0005_add_jawafentity_model.py  0005_alter_allegation_key_allegations.py  0006_alter_jawafentity_nes_id.py  0006_remove_allegation_first_public_date_and_more.py  0007_alter_modification_notes.py  0007_feedback.py  0007_uploadeddocument.py  0008_add_case_image_fields.py  0008_alter_uploadeddocument_description.py  0008_create_contributor_group.py  0008_increase_url_max_length.py  0009_merge_20260111_1447.py  0009_merge_20260111_1452.py  0009_merge_20260112_0309.py  0009_remove_timeline_allegation_allegation_evidence_and_more.py  0009_rename_app_label.py  0010_add_multiple_urls_publisher_publication_date.py  0010_allegation_updated_at_alter_allegation_state_and_more.py  (+23 more)
caseworker/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
config/: mcp_servers.py  settings.py  urls.py
docs/: API_DOCUMENTATION.md  COMPLETE_REFACTORING_SUMMARY.md  DOCUMENT_UPLOAD_IMPLEMENTATION.md  ENTITY_MIGRATION_SUMMARY.md  FEATURE_FLAG_EXPOSE_CASES_IN_REVIEW.md  IMPORT_REFACTORING.md  MIGRATION_FIX_URL_TO_JSON.md  Nepal Public Accountability Portal.md  QUICK_REFERENCE.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  SOURCE_TYPE_QUICK_REFERENCE.md  api-statistics-contract.md  design-entity-cases-relationship.md  entity-search-redesign.md  feedback-api-specification.md  manual-test-caseworker-patch-api.md
knowledge/: admin.py  models.py  retrieval.py  serializers.py  urls.py  views.py
nesq/: admin.py  api_views.py  apps.py  entity_utils.py  models.py  processor.py  serializers.py  urls.py  validators.py
ngm/: api_views.py  apps.py  serializers.py  services.py  urls.py
public_chat/: apps.py  citation_validator.py  llm.py  mcp_client.py  query_understanding.py  quota.py  response_builder.py  routing.py  serializers.py  urls.py  views.py
scripts/: convert_alleged_to_accused.py  format.sh  test.sh  test_agni_integration.py
static/: .gitkeep  README.md
tests/: conftest.py  strategies.py  test_admin_case_management.py  test_admin_e2e.py  test_api_documentation_integration.py  test_case_creator_access.py  test_case_importer_url_query.py  test_case_model.py  test_caseworker_serializers.py  test_custom_fields.py  test_document_source.py  test_document_source_admin.py  test_enrich_missing_bigo_command.py  test_entity_api.py  test_entity_deletion.py  test_feature_flag_expose_cases_in_review.py  test_feedback_admin.py  test_feedback_model.py  test_landing_page.py  test_map_press_release_files.py  test_nes_import.py  test_openapi_documentation.py  test_origin_settings.py  test_public_api.py  test_role_based_permissions.py  test_source_type.py  test_source_type_field.py  test_storage_settings.py  test_url_migration.py  test_utils.py  test_validators.py
tmp/: examples.py  jawaf_models2.py
(+167 files in other folders)
